# surfcpp

./: .clang-tidy  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  flake.nix  guix.scm  surf-config.cmake.in  surfcpp-config.cmake.in  surfcpp.nix
benchmark/: benchmark_blit.cpp  benchmark_fill.cpp  benchmark_filter.cpp  benchmark_main.cpp  benchmark_transform.cpp  blit_to_benchmark.cpp
extra/: surftool.cpp
include/surf/: algorithm.hpp  blend.hpp  blendfunc.hpp  blit.cpp  blit.hpp  channel.hpp  color.hpp  convert.hpp  fill.hpp  filter.hpp  fwd.hpp  hsv.hpp  io.hpp  ipixel_data.hpp  palette.hpp  pixel.hpp  pixel_data.hpp  pixel_data_factory.hpp  pixel_data_loader.hpp  pixel_format.hpp  pixel_view.hpp  promote.hpp  rgb.hpp  rgba.hpp  rgbaf.hpp  save.hpp  sdl.hpp  software_surface.hpp  software_surface_factory.hpp  software_surface_float.hpp  software_surface_loader.hpp  surf.hpp  transform.hpp  unwrap.hpp
include/surf/plugins/: dds.hpp  dds_rgb.hpp  dds_surface.hpp  exif.hpp  file_jpeg_compressor.hpp  file_jpeg_decompressor.hpp  imagemagick.hpp  jpeg.hpp  jpeg_compressor.hpp  jpeg_decompressor.hpp  jpeg_memory_dest.hpp  kra.hpp  mem_jpeg_compressor.hpp  mem_jpeg_decompressor.hpp  png.hpp  pnm.hpp  rsvg.hpp  ufraw.hpp  vidthumb.hpp  xcf.hpp
src/: blend.cpp  blend_scaled.cpp  blendfunc.cpp  blit.cpp  channel.cpp  color.cpp  convert.cpp  fill.cpp  palette.cpp  pixel_data.cpp  pixel_data_factory.cpp  pixel_format.cpp  save.cpp  software_surface.cpp  software_surface_factory.cpp  software_surface_float.cpp  transform.cpp
src/loader/: dds_software_surface_loader.hpp  imagemagick_software_surface_loader.cpp  imagemagick_software_surface_loader.hpp  jpeg_software_surface_loader.hpp  kra_software_surface_loader.hpp  png_software_surface_loader.hpp  rsvg_software_surface_loader.hpp  ufraw_software_surface_loader.hpp  vidthumb_software_surface_loader.hpp  xcf_software_surface_loader.hpp
src/plugins/: dds.cpp  dds.hpp  dds_rgb.hpp  dds_surface.cpp  dds_surface.hpp  exif.cpp  exif.hpp  file_jpeg_compressor.cpp  file_jpeg_compressor.hpp  file_jpeg_decompressor.cpp  file_jpeg_decompressor.hpp  imagemagick.cpp  imagemagick.hpp  jpeg.cpp  jpeg.hpp  jpeg_compressor.cpp  jpeg_compressor.hpp  jpeg_decompressor.cpp  jpeg_decompressor.hpp  jpeg_memory_dest.cpp  jpeg_memory_dest.hpp  jpeg_memory_src.cpp  jpeg_memory_src.hpp  kra.cpp  kra.hpp  mem_jpeg_compressor.cpp  mem_jpeg_compressor.hpp  mem_jpeg_decompressor.cpp  mem_jpeg_decompressor.hpp  png.cpp  png.hpp  pnm.cpp  pnm.hpp  pnm_mem_reader.hpp  rsvg.cpp  rsvg.hpp  ufraw.cpp  ufraw.hpp  vidthumb.cpp  vidthumb.hpp  (+2 more)
src/surface/: dds_software_surface_loader.hpp  pixel_data.cpp  pixel_data.hpp  png_software_surface_loader.hpp  rgb.hpp  rgba.hpp  rgbaf.hpp  software_surface.cpp  software_surface.hpp  software_surface_factory.cpp  software_surface_factory.hpp  software_surface_float.cpp  software_surface_float.hpp  software_surface_loader.hpp  vidthumb_software_surface_loader.hpp
src/util/: exec.cpp  exec.hpp  filesystem.cpp  filesystem.hpp
test/: color_test.cpp  convert_test.cpp  hsv_test.cpp  pixel_data_test.cpp  pixel_test.cpp  pixel_view_test.cpp  png_test.cpp  save_test.cpp  sdl_test.cpp  software_surface_factory_test.cpp  software_surface_test.cpp
uitest/: software_surface_test.cpp
